// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalDialog /> when the title is hidden matches its snapshot 1`] = `
<StyledWithResponsiveMode
  containerClassName=
      y-modalDialog
      TEST_CLASSNAME
      {
        width: 580px;
      }
  isOpen={false}
  onDismiss={[MockFunction]}
  titleAriaId="y-modalDialog--title"
>
  <CustomizedBlock
    horizontalPadding="xLarge"
    verticalPadding="medium"
  >
    <ScreenreaderText>
      <div
        id="y-modalDialog--title"
      >
        <h1>
          Title
        </h1>
      </div>
    </ScreenreaderText>
  </CustomizedBlock>
</StyledWithResponsiveMode>
`;

exports[`<ModalDialog /> with additional className matches its snapshot 1`] = `
<StyledWithResponsiveMode
  containerClassName=
      y-modalDialog
      TEST_CLASSNAME
      {
        width: 580px;
      }
  isOpen={false}
  onDismiss={[MockFunction]}
  titleAriaId="y-modalDialog--title"
>
  <CustomizedBlock
    horizontalPadding="xLarge"
    verticalPadding="medium"
  >
    <FixedGridRow
      bottomSpacing="xSmall"
    >
      <FixedGridColumn>
        <div
          id="y-modalDialog--title"
        >
          <Heading
            level="1"
            size="5"
          >
            Title
          </Heading>
        </div>
      </FixedGridColumn>
      <FixedGridColumn
        fixed={true}
      >
        <CustomizedClickable
          ariaLabel="close"
          block={true}
          onClick={[MockFunction]}
          unstyled={true}
        >
          <Cancel
            block={true}
            size="12"
          />
        </CustomizedClickable>
      </FixedGridColumn>
    </FixedGridRow>
  </CustomizedBlock>
</StyledWithResponsiveMode>
`;

exports[`<ModalDialog /> with default options matches its snapshot 1`] = `
<StyledWithResponsiveMode
  containerClassName=
      y-modalDialog
      {
        width: 580px;
      }
  isOpen={false}
  onDismiss={[MockFunction]}
  titleAriaId="y-modalDialog--title"
>
  <CustomizedBlock
    horizontalPadding="xLarge"
    verticalPadding="medium"
  >
    <FixedGridRow
      bottomSpacing="xSmall"
    >
      <FixedGridColumn>
        <div
          id="y-modalDialog--title"
        >
          <Heading
            level="1"
            size="5"
          >
            Title
          </Heading>
        </div>
      </FixedGridColumn>
      <FixedGridColumn
        fixed={true}
      >
        <CustomizedClickable
          ariaLabel="close"
          block={true}
          onClick={[MockFunction]}
          unstyled={true}
        >
          <Cancel
            block={true}
            size="12"
          />
        </CustomizedClickable>
      </FixedGridColumn>
    </FixedGridRow>
  </CustomizedBlock>
</StyledWithResponsiveMode>
`;
